change pwa name

--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
-  <title>jpy_minimize_your_change</title>
+  <title>目指せお財布ミニマリスト！</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
